# mini_scada

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  utils.hpp
